
[project]
name = "xontrib-macro"
version = "0.3.1"
license = {file = "LICENSE"}
description = "Library of the useful macroses for the xonsh shell."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = ["xonsh>=0.12.5"]
authors = [
    { name = "xontrib-macro", email = "no@no.no" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"





[project.urls]

Homepage = "https://github.com/xonsh/xontrib-macro"
Documentation = "https://github.com/xonsh/xontrib-macro/blob/master/README.md"
Code = "https://github.com/xonsh/xontrib-macro"
"Issue tracker" = "https://github.com/xonsh/xontrib-macro/issues"




[project.optional-dependencies]
dev = ["pytest>=7.0"]



[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
    "poetry-core>=1.3.2",
]
build-backend = "setuptools.build_meta"
[tool.setuptools]

packages = ["xontrib.macro"]
package-dir = {xontrib = "xontrib"}

platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]

xontrib = ["*.xsh", "*.py"]



[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
